--- a/templates/automaton_actions.html
+++ b/templates/automaton_actions.html
@@ -9,11 +9,14 @@
     <div class="container mt-4">
         <h2>Ações do Autômato</h2>
         <div class="row">
-            <div class="col-2">
+            <div class="col-4">
                 <a href="/convert_to_dfa" class="btn btn-primary mb-2">Converter para AFD</a>
             </div>
             <div class="col-4">
-                <a href="/" class="btn btn-secondary">Inserir Novo Autômato</a>
+                <a href="/" class="btn btn-secondary mb-2">Inserir Novo Autômato</a>
+            </div>
+            <div class="col-4">
+                <a href="/input_word_afn" class="btn btn-success">Validar Palavra do AFN</a>
             </div>
         </div>
     </div>
