mquian de turing

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
           <div class="card text-center mb-4">
             <div class="card-body">
               <h5 class="card-title">Autômatos</h5>
-              <p class="card-text">Seção de Autômatos, onde você pode explorar e manipular AFD e AFN.</p>
-              <a href="/input_automaton" class="btn btn-primary">Entrar em Autômatos</a>
+              <p class="card-text">Seção de autômatos, onde você pode explorar e manipular AFD e AFN.</p>
+              <a href="/input_automaton" class="btn btn-primary">Entrar em autômatos</a>
             </div>
           </div>
         </div>
@@ -24,7 +24,7 @@
             <div class="card-body">
               <h5 class="card-title">Máquina de Turing</h5>
               <p class="card-text">Seção de Máquina de Turing, onde você pode simular e estudar o funcionamento de uma Máquina de Turing.</p>
-              <a href="/maquina-de-turing" class="btn btn-primary">Entrar em Máquina de Turing</a>
+              <a href="/input_turing_machine" class="btn btn-primary">Entrar em Máquina de Turing</a>
             </div>
           </div>
         </div>
